# dre-ip-backend

./: .env_example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  Rocket.toml  api.yaml  config  entrypoint.sh  insert_test_data.js  log4rs.yaml  setup.js  test-setup.sh
backend_test/: Cargo.toml
backend_test/src/: lib.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
db/: Dockerfile  Dockerfile.dev  base_data.js  init_complete.js  init_replica.sh  setup.js  test_data.js
db_test/: Cargo.toml
db_test/src/: lib.rs
example_dumps/: audited_receipt.json  audited_receipt_invalid.json  audited_receipt_malformed.json  confirmed_receipt.json  confirmed_receipt_invalid.json  confirmed_receipt_malformed.json  crypto_dump.json  crypto_dump_malformed.json  election.json  election_dump.json  election_inprogress.json  election_invalid.json  election_invalid_candidate.json  election_invalid_conf_code.json  election_invalid_signature.json  election_invalid_totals.json  election_malformed.json  multiple_receipts.json  multiple_receipts_invalid.json
example_election_dumps/: election_malformed.json
src/: api.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  scheduled_task.rs  verification-cli.rs
src/api/: admin.rs  auth.rs  common.rs  group.rs  information.rs  login.rs  mod.rs  public.rs  voting.rs
src/error/: mod.rs
src/model/: bson.rs  election.rs  mod.rs  otp.rs  pagination.rs  sms.rs  user.rs
src/model/admin/: admin_core.rs  db.rs  mod.rs
src/model/api/: admin.rs  ballot.rs  candidate_totals.rs  id.rs  mod.rs  pagination.rs  receipt.rs  sms.rs
src/model/api/auth/: mod.rs  request.rs  token.rs  user.rs
src/model/api/election/: desc.rs  mod.rs  results.rs  spec.rs
src/model/api/otp/: challenge.rs  code.rs  mod.rs
src/model/auth/: claims.rs  token.rs  user.rs
src/model/ballot/: ballot_core.rs  db.rs  mod.rs  receipt.rs
src/model/base/: mod.rs
src/model/base/admin/: base.rs  mod.rs
src/model/base/election/: metadata.rs  mod.rs  spec.rs
src/model/base/voter/: base.rs  mod.rs
src/model/candidate_totals/: candidate_totals_core.rs  db.rs  mod.rs
src/model/common/: allowed_questions.rs  ballot.rs  candidate_totals.rs  mod.rs
src/model/common/election/: electorate.rs  mod.rs  question.rs  state.rs
src/model/db/: admin.rs  ballot.rs  candidate_totals.rs  election.rs  mod.rs  receipt.rs  voter.rs
src/model/db/ballot/: base.rs  db.rs  mod.rs
src/model/db/candidate_totals/: base.rs  db.rs  mod.rs
src/model/db/election/: base.rs  db.rs  finalizer.rs  metadata.rs  mod.rs
src/model/election/: db.rs  election_core.rs  electorate.rs  group.rs  groups.rs  mod.rs  spec.rs  view.rs
src/model/mongodb/: bson.rs  collection.rs  counter.rs  entity.rs  errors.rs  mod.rs
src/model/otp/: challenge.rs  code.rs  mod.rs
src/model/user/: claims.rs  mod.rs
src/model/voter/: db.rs  mod.rs  voter_core.rs
