[workspace]
members = ["backend_test", "protocol"]

[package]
name = "dreip-backend"
version = "0.1.0"
authors = ["Chris Riches", "Christian Dunn"]
edition = "2021"
description = "Backend server for our DRE-ip based voting system"
readme = "README.md"
repository = "https://github.com/DRE-ip-Implementation-Team/dre-ip-backend"
license = "GNU AGPLv3"
default-run = "dreip-backend"

# Extra binary definition for the verification tool; the server itself
# is auto-detected.
[[bin]]
name = "verification-cli"
path = "src/verification-cli.rs"
required-features = ["verification"]

[features]
default = ["otp"]
otp = []                # Enable authenticated voter sign-in (on by default)
verification = ["clap"] # Enable extra dependencies needed for verification tool compilation

[dependencies]
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-sns = "0.32.0"
data-encoding = "2.3.3"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
log = "0.4.17"
log4rs = "1.2.0"
log4rs_dynamic_filters = "0.1.3"
phonenumber = "0.3.1"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = "1.0.158"
serde_repr = "0.1.12"
serde_unit_struct = "0.1.1"
sha2 = "0.10.6"
thiserror = "1.0.40"
time = "0.3.20"
typenum = "1.16.0"

[dependencies.chrono]
version = "0.4.24"
features = ["serde"]

[dependencies.clap]
version = "4.1.13"
optional = true # Only needed by verification tool
features = ["cargo", "wrap_help"]

[dependencies.dre-ip]
path = "protocol" # Provided via git submodule

[dependencies.generic-array]
version = "0.14.6" # Need same version as `crypto-common`
features = ["serde"]

[dependencies.mongodb]
version = "2.4.0"
features = ["bson-chrono-0_4"]

[dependencies.reqwest]
version = "0.11.15"
features = ["json"]

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["secrets", "json"]

[dev-dependencies.backend-test]
path = "backend_test"

[dev-dependencies.log4rs_test_utils]
version = "0.2.3"
default-features = false
features = ["test_logging"]
