[workspace]
members = ["backend_test", "protocol"]

[package]
name = "dreip-backend"
version = "0.1.0"
authors = ["Chris Riches", "Christian Dunn"]
edition = "2021"
description = "Backend server for our DRE-ip based voting system"
readme = "README.md"
repository = "https://github.com/DRE-ip-Implementation-Team/dre-ip-backend"
license = "GNU AGPLv3"
default-run = "dreip-backend"

# Extra binary definition for the verification tool; the server itself
# is auto-detected.
[[bin]]
name = "verification-cli"
path = "src/verification-cli.rs"
required-features = ["verification"]

[features]
default = ["otp"]
otp = []                # Enable authenticated voter sign-in (on by default)
verification = ["clap"] # Enable extra dependencies needed for verification tool compilation

[dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-sdk-sns = "1"
data-encoding = "2"
hmac = "0.12"
jsonwebtoken = "9"
log = "0.4"
log4rs = "1"
log4rs_dynamic_filters = "0.1"
phonenumber = "0.3"
rand = "0.8"
rust-argon2 = "2"
serde = "1"
serde_repr = "0.1"
serde_unit_struct = "0.1"
sha2 = "0.10"
thiserror = "1"
time = "0.3"
typenum = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "4"
optional = true # Only needed by verification tool
features = ["cargo", "wrap_help"]

[dependencies.dre-ip]
path = "protocol" # Provided via git submodule

[dependencies.mongodb]
version = "2"
features = ["bson-chrono-0_4"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.rocket]
version = "0.5"
features = ["secrets", "json"]

[dev-dependencies.backend-test]
path = "backend_test"

[dev-dependencies.log4rs_test_utils]
version = "0.2"
default-features = false
features = ["test_logging"]
