[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
num_cpus = "1"
rand = "0.8"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = ["signal"] }
